Se ejecuta análisis semántico
- se solucionaron errores en el cup que no permitían compilarlo
- se agregó un método para mantener el scope "global" del programa parseado
- se probó la funcionalidad de tomar la fila y columna para mostrarla junto con cada error reportado