@@ -2,58 +2,65 @@ package main.java;
 
 import java.util.*;
 import java.io.BufferedWriter;
-import java.io.IOException;
-import java.util.ArrayList;
 import java.util.HashMap;
 
 public class SymbolTable {
 
-    public static final List<String> Tipos_Datos = Arrays.asList("int", "float", "char", "bool", "string");
+    public static final List<String> DATA_TYPES = Arrays.asList("int", "float", "char", "bool", "string");
 
-    private HashMap<String, String> symTable;
-    private Stack<HashMap<String, String>> Scopeslocales;
+    private final HashMap<String, String> globalTable;
+    private final Stack<HashMap<String, String>> localScopes;
     private String currentFunction;
 
     public SymbolTable(BufferedWriter symTableOutFile) {
-        this.Scopeslocales = new Stack<HashMap<String, String>>();
-        this.symTable = new HashMap<String, String>();
+        this.localScopes = new Stack<HashMap<String, String>>();
+        this.globalTable = new HashMap<String, String>();
         this.currentFunction = "";
     }
 
+
+    public boolean addToGlobalIfAbsent(String currentSymbol, String info) {
+        if(!this.globalTable.containsKey(currentSymbol)) {
+            this.globalTable.put(currentSymbol, info);
+            return true;
+        }
+        return false;
+    }
 
     public void setCurrentFunction(String nameFunction) {this.currentFunction = nameFunction;}
 
     public String getCurrentFunction() {return this.currentFunction;}
 
-    public void getInScope() {this.Scopeslocales.add(new HashMap<String, String>());}
+    public void createScope() {this.localScopes.add(new HashMap<String, String>());}
 
-    public void getOutScope() {this.Scopeslocales.pop();}
+    public void popScope() {this.localScopes.pop();}
 
     public void addTableSymbol(String currentHash, String characteristic) {
-        if (!this.symTable.containsKey(currentHash)) {this.symTable.put(currentHash, characteristic);}
+        if (!this.globalTable.containsKey(currentHash)) {this.globalTable.put(currentHash, characteristic);}
     }
 
-    public void addSymbolScope(String currentHash, String characteristic) {
-        if (!this.Scopeslocales.isEmpty() && !this.Scopeslocales.peek().containsKey(currentHash)) {
-            this.Scopeslocales.peek().put(currentHash, characteristic);
+    public void addSymbolToScope(String currentHash, String characteristic) {
+        if (!this.localScopes.isEmpty() && !this.localScopes.peek().containsKey(currentHash)) {
+            this.localScopes.peek().put(currentHash, characteristic);
         }
     }
 
     public boolean isInsideLocalScope(String hash) {
-        for (int i = 0; i < Scopeslocales.size(); i++) {if (Scopeslocales.get(i).containsKey(hash)) {return true;}}
+        for (HashMap<String, String> localScope : localScopes)
+            if (localScope.containsKey(hash)) return true;
         return false;
     }
 
 
-    public boolean isDataType(String data) {return Tipos_Datos.contains(data);}
+    public boolean isDataType(String data) {return DATA_TYPES.contains(data);}
 
 
     public String getType(String hash) {
         if (isDataType(hash)) {return hash;}
 
-        for (int i = 0; i < Scopeslocales.size(); i++) {
-            if (Scopeslocales.get(i).containsKey(hash)) {
-                String[] info = Scopeslocales.get(i).get(hash).split(":");
+        for (HashMap<String, String> localScope : localScopes) {
+            if (localScope.containsKey(hash)) {
+                String[] info = localScope.get(hash).split(":");
                 return info[0];
             }
         }
@@ -61,23 +68,23 @@ public class SymbolTable {
     }
 
 
-    public boolean Typeverification(String type1, String type2) {return type1.equals(type2);}
+    public boolean typeVerification(String type1, String type2) {return type1.equals(type2);}
 
 
     public boolean isValidOperation(String right, String operator, String left) {
         String typeOperandRight = getType(right);
         String typeOperandoLeft = getType(left);
-        return !(typeOperandRight.equals(Tipos_Datos.get(4)) || typeOperandoLeft.equals(Tipos_Datos.get(4)) ||
-                ((typeOperandRight.equals(Tipos_Datos.get(1)) || typeOperandoLeft.equals(Tipos_Datos.get(1))) && operator.equals("%"))) &&
+        return !(typeOperandRight.equals(DATA_TYPES.get(4)) || typeOperandoLeft.equals(DATA_TYPES.get(4)) ||
+                ((typeOperandRight.equals(DATA_TYPES.get(1)) || typeOperandoLeft.equals(DATA_TYPES.get(1))) && operator.equals("%"))) &&
                 typeOperandRight.equals(typeOperandoLeft);
     }
 
 
     public boolean functionCallVerification(String calledFunction, String function_data) {
-        if (!symTable.containsKey(calledFunction)) {return false;}
+        if (!globalTable.containsKey(calledFunction)) {return false;}
 
         String[] parameters = function_data.split(":");
-        String[] finfo = symTable.get(calledFunction).split(":");
+        String[] finfo = globalTable.get(calledFunction).split(":");
 
         if (finfo.length - 2 != parameters.length) {return false;}
 
@@ -92,27 +99,28 @@ public class SymbolTable {
 
     public boolean arrayVerification(String type, String data) {
         String[] values = data.split(":");
-        for (int i = 0; i < values.length; i++) {if (!type.equals(values[i])) {return false;}}
+        for (String value : values)
+            if (!type.equals(value)) return false;
         return true;
     }
 
 
-    public boolean integrerIndex(String index) {
-        return getType(index).equals(Tipos_Datos.get(0));
+    public boolean isIntIndex(String index) {
+        return getType(index).equals(DATA_TYPES.getFirst());
     }
 
 
-    public void printingScope() {
-        if (!Scopeslocales.empty()) {
-            System.out.println(Scopeslocales.peek());
-            System.out.println("");
+    public void writeScope() {
+        if (!localScopes.empty()) {
+            System.out.println(localScopes.peek());
+            System.out.println();
         }
     }
 
 
     public void printTableSymbol() {
-        System.out.println(symTable);
-        System.out.println("");
+        System.out.println(globalTable);
+        System.out.println();
     }
 
 }
